Fix pageHeader spacing

--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -5,7 +5,7 @@
 	background-color: $color_background;
 	display: flex;
 	justify-content: space-between;
-	padding: $spacing_b $spacing_s $spacing_xs;
+	padding: $spacing_s $spacing_s $spacing_s;
 	position: fixed;
 	top: 0;
 	width: 100%;
